--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ body {
   font-family: "Epilogue", sans-serif;
   font-size: 16px;
   color: #232323;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .glow-point {
   position: absolute;
