--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ body {
   font-family: "Epilogue", sans-serif;
   font-size: 16px;
   color: #232323;
+  transition: background-color 200ms;
 }
 .btnconnect {
   position: relative;
